# learning-langchain-v0.3

./: README.md  main.py  pyproject.toml
modules/01/: 01-intro.ipynb  image-gen2.py  lecture-01.py
modules/02/: 02-langsmith.ipynb
modules/03/: 03-prompts.ipynb
modules/04/: 04-chat-memory.ipynb
modules/05/: 05-agents-intro.ipynb
